--- a/.env
+++ b/.env
@@ -24,6 +24,6 @@ APP_SECRET=f7bd45f75714f4144d8dea1fb7a7d4cc
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/web?serverVersion=8&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/saferbase?serverVersion=8&charset=utf8"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
