--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,5 +5,7 @@ vich_uploader:
         products_images:
             uri_prefix:         '%app.path.product_images%'
             upload_destination: '%kernel.project_dir%/public%app.path.product_images%'
-            namer: 'Vich\UploaderBundle\Naming\SmartUniqueNamer'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+            delete_on_update: false
+            delete_on_remove: false
             
