--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ APP_SECRET=f7bd45f75714f4144d8dea1fb7a7d4cc
 DATABASE_URL="mysql://root:@127.0.0.1:3306/saferbase?serverVersion=8&charset=utf8"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=sendmail://default
+###< symfony/mailer ###
