--- a/.env
+++ b/.env
@@ -29,5 +29,10 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/saferbase?serverVersion=8&charset=utf
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=sendmail://default
+MAILER_DSN=smtp://b65b84c15c9a6b:97dd41ca5f88d2@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
