--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/flex": "^1.17|^2",
         "symfony/form": "^5.4",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/google-mailer": "^5.4",
         "symfony/mailer": "^5.4",
         "symfony/maker-bundle": "^1.43",
         "symfony/runtime": "5.4.*",
