--- a/.env
+++ b/.env
@@ -34,5 +34,6 @@ MAILER_DSN=smtp://b65b84c15c9a6b:97dd41ca5f88d2@smtp.mailtrap.io:2525?encryption
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+# MAILER_DSN=gmail://alexxtahi@gmail.com:AaLlEeXxXxTtAaHhIi@GgMmAaIiLl.CcOoMm@default
+# MAILER_DSN=gmail://alexxtahi@gmail.com:iqxgitijzjahmcwe@default
 ###< symfony/google-mailer ###
