--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
     "php": ">=7.2.5",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "doctrine/annotations": "^1.0",
     "doctrine/doctrine-bundle": "^2.7",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.13",
-    "doctrine/annotations": "^1.0",
     "easycorp/easyadmin-bundle": "^3.5",
     "symfony/asset": "5.4.*",
     "symfony/console": "5.4.*",
@@ -18,7 +18,7 @@
     "symfony/flex": "^1.17|^2",
     "symfony/form": "^5.4",
     "symfony/framework-bundle": "5.4.*",
-    "symfony/google-mailer": "^5.4",
+    "symfony/google-mailer": "5.4.*",
     "symfony/mailer": "^5.4",
     "symfony/maker-bundle": "^1.43",
     "symfony/runtime": "5.4.*",
