--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "symfony/validator": "5.4.*",
     "symfony/yaml": "5.4.*",
     "symfonycasts/verify-email-bundle": "^1.12",
+    "twbs/bootstrap": "^5.2",
     "twig/extra-bundle": "^2.12|^3.0",
     "twig/twig": "^2.12|^3.0",
     "vich/uploader-bundle": "^1.21"
